# TicketBookingSystem

./: CMakeLists.txt  README.md  build.sh  build_windows.bat
include/: adminwindow.h  bookingmanager.h  database.h  loginwindow.h  mainwindow.h  models.h  receiptdialog.h  reportwindow.h  seatselection.h
src/: adminwindow.cpp  database.cpp  loginwindow.cpp  main.cpp  mainwindow.cpp  moviemanager.cpp  receiptdialog.cpp  reportwindow.cpp  seatselection.cpp
